@@ -27,6 +27,7 @@ version <next>:
 - additional frame format support for Interplay MVE movies
 - support for decoding through D3D11VA in ffmpeg
 - limiter video filter
+- libvmaf video filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
